# cardetect

./: .gitignore  aws_lambda_trigger.py  pyproject.toml
cardetect/: main.py
